<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user_name"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/dash_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dash_2"
        android:textAllCaps="false"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textAllCaps="false"/>

    <ImageView
        android:layout_width="178dp"
        android:layout_height="149dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/img_1"
        tools:ignore="ContentDescription" />
    <com.airbnb.lottie.LottieAnimationView
        app:lottie_rawRes="@raw/anime"
        android:id="@+id/anime1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:lottie_autoPlay="true"
        app:lottie_speed="1"
        app:lottie_loop="true"/>
</LinearLayout>
